gen/SxfParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/slowcheetah/work_dir/sxfsharp/Sxf.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class SxfParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, INTEGER=7, SET=8, SET_LONG=9, 
		BLOCK_START=10, BLOCK_END=11, SEPARATOR=12, SP_START=13, SP_END=14, IDENTIFIER=15, 
		StringLiteral=16, WS=17, UnterminatedStringLiteral=18, BlockComment=19;
	public const int
		RULE_file = 0, RULE_block = 1, RULE_variable = 2, RULE_named_basicvar = 3, 
		RULE_unnamed_object = 4, RULE_block_elements = 5, RULE_variable_types = 6, 
		RULE_number = 7, RULE_struct = 8, RULE_var_integer = 9, RULE_var_double = 10, 
		RULE_var_false = 11, RULE_var_true = 12, RULE_var_null = 13, RULE_bool = 14, 
		RULE_string_literal = 15;
	public static readonly string[] ruleNames = {
		"file", "block", "variable", "named_basicvar", "unnamed_object", "block_elements", 
		"variable_types", "number", "struct", "var_integer", "var_double", "var_false", 
		"var_true", "var_null", "bool", "string_literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "'false'", "'FALSE'", "'true'", "'TRUE'", "'null'", null, 
		"':'", "'=>'", "'{'", "'}'", "','", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "INTEGER", "SET", "SET_LONG", 
		"BLOCK_START", "BLOCK_END", "SEPARATOR", "SP_START", "SP_END", "IDENTIFIER", 
		"StringLiteral", "WS", "UnterminatedStringLiteral", "BlockComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Sxf.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SxfParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SxfParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SxfParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_START() { return GetToken(SxfParser.BLOCK_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_END() { return GetToken(SxfParser.BLOCK_END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Block_elementsContext block_elements() {
			return GetRuleContext<Block_elementsContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			Match(BLOCK_START);
			State = 36;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BLOCK_START) | (1L << SP_START) | (1L << IDENTIFIER) | (1L << StringLiteral))) != 0)) {
				{
				State = 35;
				block_elements();
				}
			}

			State = 38;
			Match(BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Named_basicvarContext named_basicvar() {
			return GetRuleContext<Named_basicvarContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Unnamed_objectContext unnamed_object() {
			return GetRuleContext<Unnamed_objectContext>(0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(Context, State);
		EnterRule(_localctx, 4, RULE_variable);
		try {
			State = 42;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
			case StringLiteral:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40;
				named_basicvar();
				}
				break;
			case BLOCK_START:
			case SP_START:
				EnterOuterAlt(_localctx, 2);
				{
				State = 41;
				unnamed_object();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Named_basicvarContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SxfParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public String_literalContext string_literal() {
			return GetRuleContext<String_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SET() { return GetToken(SxfParser.SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Variable_typesContext variable_types() {
			return GetRuleContext<Variable_typesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SET_LONG() { return GetToken(SxfParser.SET_LONG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public Named_basicvarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_named_basicvar; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterNamed_basicvar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitNamed_basicvar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamed_basicvar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Named_basicvarContext named_basicvar() {
		Named_basicvarContext _localctx = new Named_basicvarContext(Context, State);
		EnterRule(_localctx, 6, RULE_named_basicvar);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				{
				State = 44;
				Match(IDENTIFIER);
				}
				break;
			case StringLiteral:
				{
				State = 45;
				string_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 52;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SET:
				{
				{
				State = 48;
				Match(SET);
				State = 49;
				variable_types();
				}
				}
				break;
			case SET_LONG:
				{
				{
				State = 50;
				Match(SET_LONG);
				State = 51;
				block();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Unnamed_objectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		public Unnamed_objectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unnamed_object; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterUnnamed_object(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitUnnamed_object(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnnamed_object(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Unnamed_objectContext unnamed_object() {
		Unnamed_objectContext _localctx = new Unnamed_objectContext(Context, State);
		EnterRule(_localctx, 8, RULE_unnamed_object);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BLOCK_START:
				{
				State = 54;
				block();
				}
				break;
			case SP_START:
				{
				State = 55;
				@struct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Block_elementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext[] variable() {
			return GetRuleContexts<VariableContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEPARATOR() { return GetTokens(SxfParser.SEPARATOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEPARATOR(int i) {
			return GetToken(SxfParser.SEPARATOR, i);
		}
		public Block_elementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block_elements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterBlock_elements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitBlock_elements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock_elements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Block_elementsContext block_elements() {
		Block_elementsContext _localctx = new Block_elementsContext(Context, State);
		EnterRule(_localctx, 10, RULE_block_elements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			variable();
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SEPARATOR) {
				{
				{
				State = 59;
				Match(SEPARATOR);
				State = 60;
				variable();
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Variable_typesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public String_literalContext string_literal() {
			return GetRuleContext<String_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_nullContext var_null() {
			return GetRuleContext<Var_nullContext>(0);
		}
		public Variable_typesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable_types; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterVariable_types(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitVariable_types(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable_types(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Variable_typesContext variable_types() {
		Variable_typesContext _localctx = new Variable_typesContext(Context, State);
		EnterRule(_localctx, 12, RULE_variable_types);
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case StringLiteral:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				string_literal();
				}
				break;
			case INTEGER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67;
				number();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68;
				@bool();
				}
				break;
			case SP_START:
				EnterOuterAlt(_localctx, 4);
				{
				State = 69;
				@struct();
				}
				break;
			case BLOCK_START:
				EnterOuterAlt(_localctx, 5);
				{
				State = 70;
				block();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 6);
				{
				State = 71;
				var_null();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Var_integerContext var_integer() {
			return GetRuleContext<Var_integerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_doubleContext var_double() {
			return GetRuleContext<Var_doubleContext>(0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 14, RULE_number);
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				var_integer();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75;
				var_double();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP_START() { return GetToken(SxfParser.SP_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SP_END() { return GetToken(SxfParser.SP_END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Variable_typesContext[] variable_types() {
			return GetRuleContexts<Variable_typesContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_typesContext variable_types(int i) {
			return GetRuleContext<Variable_typesContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEPARATOR() { return GetTokens(SxfParser.SEPARATOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEPARATOR(int i) {
			return GetToken(SxfParser.SEPARATOR, i);
		}
		public StructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterStruct(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitStruct(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStruct(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructContext @struct() {
		StructContext _localctx = new StructContext(Context, State);
		EnterRule(_localctx, 16, RULE_struct);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(SP_START);
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << INTEGER) | (1L << BLOCK_START) | (1L << SP_START) | (1L << StringLiteral))) != 0)) {
				{
				State = 79;
				variable_types();
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==SEPARATOR) {
					{
					{
					State = 80;
					Match(SEPARATOR);
					State = 81;
					variable_types();
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 89;
			Match(SP_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_integerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(SxfParser.INTEGER, 0); }
		public Var_integerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_integer; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterVar_integer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitVar_integer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar_integer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_integerContext var_integer() {
		Var_integerContext _localctx = new Var_integerContext(Context, State);
		EnterRule(_localctx, 18, RULE_var_integer);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_doubleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INTEGER() { return GetTokens(SxfParser.INTEGER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER(int i) {
			return GetToken(SxfParser.INTEGER, i);
		}
		public Var_doubleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_double; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterVar_double(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitVar_double(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar_double(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_doubleContext var_double() {
		Var_doubleContext _localctx = new Var_doubleContext(Context, State);
		EnterRule(_localctx, 20, RULE_var_double);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(INTEGER);
			State = 94;
			Match(T__0);
			State = 95;
			Match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_falseContext : ParserRuleContext {
		public Var_falseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_false; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.EnterVar_false(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISxfListener typedListener = listener as ISxfListener;
			if (typedListener != null) typedListener.ExitVar_false(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISxfVisitor<TResult> typedVisitor = visitor as ISxfVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar_false(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_falseContext var_false() {
		Var_falseContext _localctx = new Var_falseContext(Context, State);
		EnterRule(_localctx, 22, RULE_var_false);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			_la = TokenStream.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
